Fix some characters not fitting in the select box component.

--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles.css
@@ -6128,6 +6128,7 @@ h6 {
 }
 .event--calendar--wrapper .calendar--select select {
   background-image: url(../../../../../etc/designs/nhmwww/img/icons/directory-search-dropdown-arrow.png);
+  padding: 0.5rem 0.5rem 0.3rem;    
 }
 .event--calendar--wrapper .reset--filter {
   font-family: Arial;
